tests/ui/mismatched_types/starts-with-stringify-type-mismatchrs-issue-48364.rs
fn foo() -> bool {
    b"".starts_with(stringify!(foo))
    //~^ ERROR mismatched types
}

fn main() {}

// https://github.com/rust-lang/rust/issues/48364
